--- a/Heart Stroke Prediction - Code & Technical Analysis (Team KAT).Rmd
+++ b/Heart Stroke Prediction - Code & Technical Analysis (Team KAT).Rmd
@@ -29,7 +29,7 @@ library(dplyr)
 # Loading the dataset
 ```{r load_csv, include=TRUE, echo=TRUE}
 # reading the dataset
-stroke_df <- read.csv("C:/Users/Admin/OneDrive/Desktop/DataSet/framingham.csv", header = TRUE)
+stroke_df <- read.csv("C:/Data Science/DATS-6101-GROUP-KAT-main/DATS-6101-GROUP-KAT-main/DataSet/framingham.csv", header = TRUE)
 stroke_df
 ```
 
@@ -98,6 +98,32 @@ stroke_1 = subset(stroke_df, prevalentStroke == 1)
 stroke_0 = subset(stroke_df, prevalentStroke == 0)
 stroke_1_female = subset(stroke_df, prevalentStroke == 1 & gender == "Female")
 stroke_1_male = subset(stroke_df, prevalentStroke == 1 & gender == "Male")
+
+# creating different columns for bmi, age and average_glucose_level based on different bucketing for each variables
+dat <- within(stroke_df, {   
+  BMI.cat = NA # need to initialize variable
+  BMI.cat[BMI < 18.5] = "underweight"
+  BMI.cat[BMI >= 18.5 & BMI < 25] = "normal"
+  BMI.cat[BMI >= 25 & BMI < 30] = "overweight"
+  BMI.cat[BMI >= 30 & BMI < 40] = "obesity"
+  BMI.cat[BMI >=40] = "severe obesity" 
+  gluc.cat = NA # need to initialize variable
+  gluc.cat[glucose < 60] = "Below 60"
+  gluc.cat[glucose >= 60 & glucose < 90] = "60 - 90"
+  gluc.cat[glucose >= 90 & glucose < 120] = "90 - 120"
+  gluc.cat[glucose >= 120 & glucose < 180] = "120 - 180"
+  gluc.cat[glucose >= 180 & glucose < 273] = "180 - 273"
+  age.cat = NA
+  age.cat[age<=20] = "Under 20"
+  age.cat[age>=21 & age<= 40 ] = "20-40"
+  age.cat[age>=41 & age<= 60 ] = "40-60"
+  age.cat[age>=61 & age<= 80 ] = "60-80"
+  age.cat[age>=80 ] = "above 80"
+   } )
+
+dat$BMI.cat<- factor(dat$BMI.cat,levels= c("underweight","normal","overweight","obesity","severe obesity" ))
+dat$gluc.cat<- factor(dat$gluc.cat,levels= c("Below 60","60 - 90","90 - 120","120 - 180","180 - 273" ))
+dat$age.cat<- factor(dat$age.cat,levels= c("Under 20","20-40","40-60","60-80","above 80"))
 ```
 
 ```{r}
@@ -106,6 +132,31 @@ stroke_1_male = subset(stroke_df, prevalentStroke == 1 & gender == "Male")
 summary(stroke_df)
 ```
 
+
+
+```{r}
+#This plot indicates count of people of particular age group. 
+ggplot(stroke_df, aes(x = age)) + 
+  geom_histogram(binwidth = 0.6, aes(fill = ..count..)) + 
+  scale_fill_gradient('Count', low = 'blue', high = 'red') + 
+  labs(x = "Age of Patient", y = "Patient Count", title = "Age Frequency Histogram")
+
+ggplot(stroke_df, aes(x=BMI)) +  geom_density(fill="pink", color="pink", alpha=0.5)+ theme_bw() + theme()+ ggtitle("Distribution for BMI")
+
+ggplot(stroke_df, aes(x = glucose)) + 
+  geom_histogram(binwidth = 2.0, aes(fill = ..count..)) + 
+  scale_fill_gradient('Count', low = 'blue', high = 'red') + 
+  labs(x = "Age of Patient", y = "Patient Count", title = "Age Frequency Histogram")
+
+# Count of Males and Females in the Dataset
+ggplot(stroke_df, aes(x=gender,fill=gender))+geom_bar()+ggtitle("Count of Male and Female in the Dataset")+ theme_bw() +
+  theme()+ xlab("Gender") + ylab("Count of people")
+```
+
+```{r}
+
+#To do implementation
+```
 
 
 
